# accessibility-suite

./: .gitignore  A11Y_ASSIST_TEST_COVERAGE_REQUIREMENTS.md  CONTRIBUTING.md  ENGINE.md  LICENSE  PRESS_RELEASE.md  PROV_METHODS_CATALOG.md  QUICKSTART.md  README.md  RELEASE_NOTES.md  package-lock.json  package.json  pyproject.toml
.github/workflows/: ci.yml
a11y_assist/: __init__.py  cli.py  from_cli_error.py  guard.py  ingest.py  methods.py  parse_raw.py  render.py  storage.py
a11y_assist/profiles/: __init__.py  cognitive_load.py  cognitive_load_render.py  dyslexia.py  dyslexia_render.py  plain_language.py  plain_language_render.py  screen_reader.py  screen_reader_render.py
a11y_assist/schemas/: assist.request.schema.v0.1.json
docs/: rules.md
docs/prov-spec/: CHANGELOG.md  CONFORMANCE_LEVELS.md  CONTRIBUTING.md  IMPLEMENTER_CHECKLIST.md  LICENSE  PRESS_RELEASE.md  README.md  SETUP.md  WHY.md
docs/prov-spec/examples/: artifact.example.json  artifact.ref.example.json  evidence.example.json  mcp.envelope.example.json  mcp.request.example.json  prov.record.example.json
docs/prov-spec/interop/: PROOF_NODE_ENGINE.md
docs/prov-spec/spec/: MCP_COMPATIBILITY.md  PROV_METHODS_CATALOG.md  PROV_METHODS_SPEC.md  methods.json
docs/prov-spec/spec/schemas/: artifact.ref.schema.v0.1.json  artifact.schema.v0.1.json  assist.response.schema.v0.1.json  cli.error.schema.v0.1.json  evidence.schema.v0.1.json  mcp.envelope.schema.v0.1.json  mcp.request.schema.v0.1.json  methods.schema.json  prov-capabilities.schema.json  prov.record.schema.v0.1.json
docs/prov-spec/spec/vectors/adapter.wrap.envelope_v0_1/: expected.json  input.json
docs/prov-spec/spec/vectors/engine.extract.evidence.json_pointer/: expected.json  input.json
docs/prov-spec/spec/vectors/integrity.digest.sha256/: expected.json
docs/prov-spec/tools/python/: prov_validator.py
examples/a11y-demo-site/: .gitignore  CONTRIBUTING.md  README.md
examples/a11y-demo-site/.github/workflows/: a11y-artifacts.yml  a11y.yml
examples/a11y-demo-site/html/: contact.html  index.html
examples/a11y-demo-site/scripts/: a11y.sh
fixtures/bad/: button-no-name.html  img-missing-alt.html  input-missing-label.html  missing-lang.html
fixtures/good/: index.html
fixtures/requests/: a11y.diagnose.ok.json  a11y.evidence.ok.json
fixtures/responses/: a11y.diagnose.ok.json  a11y.diagnose.provenance_fail.json  a11y.evidence.ok.json
pipelines/: test-a11y-ci-template.yml
pipelines/templates/: a11y-ci.yml
src/: cli.js  envelope.js  fswalk.js  html_parse.js  ids.js  index.js  scan.js
src/a11y-assist/: PRESS_RELEASE.md  pyproject.toml
src/a11y-ci/: A11Y_CI_TEST_COVERAGE_REQUIREMENTS.md  CONTRIBUTING.md  README.md  pyproject.toml
src/a11y-ci/.github/workflows/: ci.yml
src/a11y-ci/a11y_ci/: __init__.py  allowlist.py  cli.py  gate.py  help.py  mcp_payload.py  render.py  report.py  scorecard.py  severity.py
src/a11y-ci/a11y_ci/schema/: scorecard.schema.json
src/a11y-ci/a11y_ci/schemas/: allowlist.schema.json
src/a11y-ci/npm/: README.md  package.json
src/a11y-ci/tests/: __init__.py  test_allowlist_v2.py  test_gate.py  test_mcp_cli.py  test_mcp_payload.py  test_rule_help.py  test_schema_validation.py  test_scorecard_canonical.py  test_smoke_cli.py
src/a11y-ci/tests/fixtures/: allowlist_expired.json  allowlist_ok.json  baseline_ok.json  current_fail.json  current_ok.json  current_regresses.json
src/a11y-evidence-engine/: CONTRIBUTING.md  README.md  package.json
src/a11y-lint/: README.md  pyproject.toml
src/a11y-mcp-tools/: CONTRIBUTING.md  PROV_METHODS_CATALOG.md  README.md  package.json
src/a11y-mcp-tools/src/schemas/: provenance.js
src/evidence/: canonicalize.js  json_pointer.js  prov_emit.js
src/rules/: document_missing_lang.js  form_control_missing_label.js  img_missing_alt.js  index.js  interactive_missing_name.js
src/schemas/: artifact.js  diagnosis.schema.v0.1.json  envelope.schema.v0.1.json  evidence.bundle.schema.v0.1.json  evidence.js  index.js  provenance.js
src/schemas/tools/: a11y.diagnose.request.schema.v0.1.json  a11y.diagnose.response.schema.v0.1.json  a11y.evidence.request.schema.v0.1.json  a11y.evidence.response.schema.v0.1.json
src/tools/: diagnose.js  evidence.js  index.js
test/: contract.test.mjs  diagnose.test.js  evidence.test.js  scan.test.js  schema.test.js  vectors.test.js
tests/: __init__.py  test_cognitive_load.py  test_dyslexia.py  test_explain.py  test_golden.py  test_guard.py  test_guard_integration.py  test_ingest.py  test_methods_metadata.py  test_plain_language.py  test_render.py  test_screen_reader.py  test_storage_last.py  test_triage.py
tests/fixtures/: cli_error_good.json  cli_error_missing_id.json  cli_error_string_format.json  golden_screen_reader_cli_error.txt  golden_screen_reader_raw_no_id.txt  golden_screen_reader_raw_with_id.txt  raw_good.txt  raw_no_id.txt
tests/fixtures/base_inputs/: cli_error_high.json  cli_error_medium.json  raw_text_low.txt
tests/fixtures/expected/: cognitive_load_high.txt  dyslexia_high.txt  lowvision_high.txt  plain_language_high.txt  screen_reader_high.txt
tools/ado/: a11y-ci.ps1
(+10 files in other folders)
