[build-system]
requires = ["setuptools>=69", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "a11y-assist"
version = "0.2.1"
description = "Low-vision-first assistant for CLI failures (additive, deterministic)."
readme = "README.md"
requires-python = ">=3.10"
license = {text = "MIT"}
authors = [
    {name = "mcp-tool-shop", email = "64996768+mcp-tool-shop@users.noreply.github.com"}
]
keywords = [
    "accessibility",
    "a11y",
    "cli",
    "assistant",
    "low-vision",
    "provenance",
    "safe"
]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Software Development :: Quality Assurance",
    "Topic :: Software Development :: User Interfaces",
]
dependencies = [
  "click>=8.1.7",
  "jsonschema>=4.22.0"
]

[project.urls]
Homepage = "https://github.com/mcp-tool-shop/a11y-assist"
Repository = "https://github.com/mcp-tool-shop/a11y-assist"
Issues = "https://github.com/mcp-tool-shop/a11y-assist/issues"
Changelog = "https://github.com/mcp-tool-shop/a11y-assist/blob/main/RELEASE_NOTES.md"

[project.optional-dependencies]
dev = [
  "pytest>=8.0.0",
  "ruff>=0.6.0",
]

[project.scripts]
a11y-assist = "a11y_assist.cli:main"
assist-run = "a11y_assist.cli:assist_run"

[tool.ruff]
line-length = 100

[tool.pytest.ini_options]
testpaths = ["tests"]
